--- a/static/base/_lists.scss
+++ b/static/base/_lists.scss
@@ -2,6 +2,7 @@
 
 ul {
   margin-bottom: 1em;
+  padding: 0;
 
   &.twocol {
     -moz-column-count: 2;
@@ -23,6 +24,7 @@ ul {
 
 ol {
   margin-bottom: 1em;
+  padding: 0;
 
   &.twocol {
     -moz-column-count: 2;
