--- a/static/screen.scss
+++ b/static/screen.scss
@@ -1,19 +1,3 @@
-@import '../node_modules/normalize.css/normalize.css';
-
-// vars
-@import "vars/colours";
-@import "vars/fonts";
-@import "vars/vars";
-
-// base
-@import "base/media";
-@import "base/typeography";
-@import "base/main";
-@import "base/theme";
-@import "base/footer";
-@import "base/lists";
-@import "base/quotes";
-@import "base/links";
-@import "base/tables";
-@import "base/article";
-@import "base/borders";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
